feat(Cancel 类的实现、withCredentials、xsrf防御):
Cancel 类的实现和额外逻辑的编写和demo验证。 withCredentials 跨域请求携带 cookie 的配置。xsrf防御的实现和demo验证。

--- a/package.json
+++ b/package.json
@@ -126,5 +126,8 @@
     "express": "^4.16.4",
     "body-parser": "^1.18.3",
     "qs": "^6.7.0"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.4"
   }
 }
