--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@types/qs": "^6.5.3",
+    "@types/nprogress": "0.0.29",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
@@ -125,7 +126,11 @@
     "tslint-loader": "^3.5.4",
     "express": "^4.16.4",
     "body-parser": "^1.18.3",
-    "qs": "^6.7.0"
+    "qs": "^6.7.0",
+    "nprogress": "^0.2.0",
+    "css-loader": "^3.4.2",
+    "style-loader": "^1.1.3",
+    "connect-multiparty": "^2.2.0"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4"
