--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "nprogress": "^0.2.0",
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
-    "connect-multiparty": "^2.2.0"
+    "connect-multiparty": "^2.2.0",
+    "atob": "^2.1.2"
   },
   "dependencies": {
     "cookie-parser": "^1.4.4"
